Align form elements correctly on Firefox

--- a/assets/css/frontend/forms.scss
+++ b/assets/css/frontend/forms.scss
@@ -38,6 +38,7 @@ form {
     >textarea,
     >.input {
       align-self: center;
+      justify-self: start;
     }
 
     >label {
